--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,5 @@
-{{page-title "MyBlog"}}
-
-{{!-- The following component displays Ember's default welcome message. --}}
-<WelcomePage />
-{{!-- Feel free to remove this! --}}
+<h2 id="title">
+  <a href="/posts">My Ember blog</a>
+</h2>
 
 {{outlet}}
